--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.9.1
+aiohttp>=3.9.2
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 attrs==23.2.0
@@ -28,7 +28,7 @@ multidict==6.0.4
 numpy==1.26.3
 outcome==1.3.0.post0
 pandas==2.1.4
-Pillow==9.4.0
+Pillow>=10.2.0
 pycodestyle==2.10.0
 pycparser==2.21
 pygame==2.5.2
